--- a/Prod/php/modules/connexion/html/connexion.html
+++ b/Prod/php/modules/connexion/html/connexion.html
@@ -47,9 +47,6 @@
               class="form-control data-input"
             />
           </div>
-          <small class="error-message col-7 text-left"
-            >Utilisateur indéfinie</small
-          >
         </div>
 
         <div
@@ -71,7 +68,7 @@
         <div
           class="row justify-content-center text-white mb-4 mx-0 container-fluid"
         >
-          <button type="submit" class="btn btn-danger">Se connecter</button>
+          <button type="submit" class="btn btn-success">Se connecter</button>
         </div>
       </form>
     </div>
